# JACKIE2

./: BitString.h  BitString_mmap.h  Commonf.h  CreateMmapFile_main.cpp  FastaFile.h  JACKIE  JACKIE.countOffSites  JACKIE.countSeqNeighbors  JACKIE.countSeqNeighbors.pmulti  JACKIE.encodeSeqCountDatabase  JACKIE.encodeSeqSpace  JACKIE.encodeSeqSpaceNGG  JACKIE.main.cpp  JACKIE.sortToBed  KeyedPosition.h  Makefile  Makefile.am  Makefile.in  Nucleic.h  NucleicBit.h  README.md  SeqSpace.main 1.cpp  SeqSpace.main.cpp  StringUtil.h  bigBedToBedPlus.c  chainExonBedsToTranscriptBed.py  chainSameChromSites.py  configure  configure.ac  fastjoinBedByOverlap.py  filterPAMFoldGC.py  filterTableForZFableSeq.py  filterTableForZFableSeqAndCopyNum.py  joinBedItemsWithinRadius.py  joinBedItemsWithinRadius2.py  outbedForPrefixJob.sh  packBinaries.sh  removeIllegalBlockEntries.py  runCasOFFinderOnSequences.py
AutoSql_files/: OneCopyOffSiteCounts.as  TwoPlusCopyOffSiteCounts.as
Binaries/arm64-apple-darwin20/: JACKIE.countSeqNeighbors  JACKIE.countSeqNeighbors.pmulti  JACKIE.encodeSeqCountDatabase  JACKIE.encodeSeqSpace  JACKIE.encodeSeqSpace.prefixed  JACKIE.encodeSeqSpaceNGG  JACKIE.sortToBed
Binaries/x86_64-Mac/: JACKIE.countSeqNeighbors  JACKIE.countSeqNeighbors.pmulti  JACKIE.encodeSeqCountDatabase  JACKIE.encodeSeqSpace  JACKIE.encodeSeqSpace.prefixed  JACKIE.encodeSeqSpaceNGG  JACKIE.queryDB  JACKIE.sortToBed
Binaries/x86_64-linux/: JACKIE.countSeqNeighbors  JACKIE.countSeqNeighbors.pmulti  JACKIE.encodeSeqCountDatabase  JACKIE.encodeSeqSpace  JACKIE.encodeSeqSpace.prefixed  JACKIE.encodeSeqSpaceNGG  JACKIE.queryDB  JACKIE.sortToBed
JACKIE.queryDB/: JACKIE.queryDB.c  README.md  makefile
bigBedToBedPlus/: README.md  bigBedToBedPlus  bigBedToBedPlus.bak.c  bigBedToBedPlus.c  filter.txt  makefile  rangeListFile.txt
bigBedToBedPlus/Mac_AppleM1_binary_Arm64/: bigBedToBedPlus
bigBedToBedPlus/Mac_binary_x86_64/: bigBedToBedPlus
bigBedToBedPlus/Mac_x86_64_binary/: bigBedToBedPlus
bigBedToBedPlus/Unix_Binary_x86_64/: bigBedToBedPlus
