AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = JACKIE JACKIE.encodeSeqSpaceNGG JACKIE.countSeqNeighbors JACKIE.encodeSeqSpace JACKIE.enumAbsentmers
bin_SCRIPTS = outbedForPrefixJob.sh chainExonBedsToTranscriptBed.py removeIllegalBlockEntries.py fastjoinBedByOverlap.py runCasOFFinderOnSequences.py
JACKIE_SOURCES = JACKIE.main.cpp
JACKIE_encodeSeqSpaceNGG_LDFLAGS = -lz
JACKIE_encodeSeqSpaceNGG_CPPFLAGS = -O3 -D__FAST_IO__ -D__MODE3_WRITERNGG 
JACKIE_encodeSeqSpaceNGG_SOURCES = SeqSpace.main.cpp
JACKIE_countSeqNeighbors_LDFLAGS = -lz
JACKIE_countSeqNeighbors_CPPFLAGS = -O3 -D__USE_GZIP -D__FAST_IO__ -D__MODE3_READER
JACKIE_countSeqNeighbors_SOURCES = SeqSpace.main.cpp
JACKIE_encodeSeqSpace_LDFLAGS = -lz
JACKIE_encodeSeqSpace_CPPFLAGS = -O3 -D__FAST_IO__ -D__MODE3_WRITER
JACKIE_encodeSeqSpace_SOURCES = SeqSpace.main.cpp
JACKIE_enumAbsentmers_LDFLAGS = -lz
JACKIE_enumAbsentmers_CPPFLAGS = -O3 -D__FAST_IO__ -D__MODE3_OFFAWARE
JACKIE_enumAbsentmers_SOURCES = SeqSpace.main.cpp