AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = JACKIE.bin JACKIE.sortToBed JACKIE.vector JACKIE.encodeSeqSpaceNGG JACKIE.countSeqNeighbors JACKIE.encodeSeqSpace JACKIE.encodeSeqSpace.prefixed JACKIE.encodeSeqCountDatabase JACKIE.countSeqNeighbors.pmulti JACKIE.countOffSites
bin_SCRIPTS = outbedForPrefixJob.sh chainSameChromSites.py removeIllegalBlockEntries.py fastjoinBedByOverlap.py runCasOFFinderOnSequences.py filterTableForZFableSeq.py filterTableForZFableSeqAndCopyNum.py filterPAMFoldGC.py
JACKIE_bin_SOURCES = JACKIE.main.cpp
JACKIE_bin_CPPFLAGS = -O3 -D__FAST_IO__ -D__BIN_MAIN__
JACKIE_sortToBed_SOURCES = JACKIE.main.cpp
JACKIE_sortToBed_CPPFLAGS = -O3 -D__FAST_IO__ -D__SORTTOBED_MAIN__
JACKIE_encodeSeqSpaceNGG_LDFLAGS = -lz
JACKIE_encodeSeqSpaceNGG_CPPFLAGS = -O3 -D__FAST_IO__ -D__MODE3_WRITERNGG 
JACKIE_encodeSeqSpaceNGG_SOURCES = SeqSpace.main.cpp
JACKIE_countSeqNeighbors_LDFLAGS = -lz
JACKIE_countSeqNeighbors_CPPFLAGS = -O3 -D__USE_GZIP -D__FAST_IO__ -D__MODE3_READER
JACKIE_countSeqNeighbors_SOURCES = SeqSpace.main.cpp
JACKIE_encodeSeqSpace_LDFLAGS = -lz
JACKIE_encodeSeqSpace_CPPFLAGS = -O3 -D__FAST_IO__ -D__MODE3_WRITER
JACKIE_encodeSeqSpace_SOURCES = SeqSpace.main.cpp
JACKIE_encodeSeqSpaceNGG_mmap_LDFLAGS = -lz
JACKIE_encodeSeqSpaceNGG_mmap_CPPFLAGS = -O3 -D__FAST_IO__ -D__MODE3_WRITERNGG -D__USE_MMAP__
JACKIE_encodeSeqSpaceNGG_mmap_SOURCES = SeqSpace.main.cpp
JACKIE_createMmapFile_CPPFLAGS = -O3
JACKIE_createMmapFile_SOURCES = CreateMmapFile_main.cpp
JACKIE_encodeSeqSpace_prefixed_LDFLAGS = -lz
JACKIE_encodeSeqSpace_prefixed_CPPFLAGS = -O3 -D__FAST_IO__ -D__MODE3_WRITERNGG_PREFIXED
JACKIE_encodeSeqSpace_prefixed_SOURCES = SeqSpace.main.cpp
JACKIE_encodeSeqCountDatabase_LDFLAGS = -lz
JACKIE_encodeSeqCountDatabase_CPPFLAGS = -O3 -D__FAST_IO__ -D__MODE3_WRITERNGG_PREFIXED_OFFSITECOUNTS
JACKIE_encodeSeqCountDatabase_SOURCES = SeqSpace.main.cpp
JACKIE_countSeqNeighbors_prefixed_LDFLAGS = -lz
JACKIE_countSeqNeighbors_prefixed_CPPFLAGS = -O3 -D__USE_GZIP -D__FAST_IO__ -D__MODE3_READER_PREFIXED
JACKIE_countSeqNeighbors_prefixed_SOURCES = SeqSpace.main.cpp
JACKIE_countSeqNeighbors_pmulti_LDFLAGS = -lz
JACKIE_countSeqNeighbors_pmulti_CPPFLAGS = -O3 -D__USE_GZIP -D__FAST_IO__ -D__MODE3_READER_PREFIXED_MULTI
JACKIE_countSeqNeighbors_pmulti_SOURCES = SeqSpace.main.cpp
JACKIE_countOffSites_LDFLAGS = -lz
JACKIE_countOffSites_CPPFLAGS = -O3 -D__USE_GZIP -D__FAST_IO__ -D__MODE3_READER_PREFIXED_MULTI_OFFSITECOUNTS
JACKIE_countOffSites_SOURCES = SeqSpace.main.cpp
JACKIE_map_SOURCES = JACKIE.main.cpp
JACKIE_map_CPPFLAGS = -O3 -D__FAST_IO__ -D__JACKIE_MAP__
JACKIE_svector_SOURCES = JACKIE.main.cpp
JACKIE_svector_CPPFLAGS = -O3 -D__FAST_IO__ -D__JACKIE_SORTED_VECTOR__
JACKIE_vector_SOURCES = JACKIE.main.cpp
JACKIE_vector_CPPFLAGS = -O3 -D__FAST_IO__ -D__JACKIE_VECTOR__
